<resources>
    <string name="app_name">Fitness App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="profile">Profile</string>
    <string name="default_steps">600</string>
    <string name="steps_target">/6000 Steps</string>
    <string name="default_distance">0.5</string>
    <string name="miles_uom">Miles</string>
    <string name="default_calories">80</string>
    <string name="calories_uom">kcal</string>
    <string name="default_time">60</string>
    <string name="default_600_steps">600 Steps</string>
    <string name="goal">Goal: 6000 Steps</string>
    <string name="steps_left">5400 Steps left</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="height_cm">Height (CM)</string>
    <string name="save">Save</string>
    <string name="_600">600</string>
    <string name="steps">Steps</string>
    <string name="walking">Walking</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="active_time">Active Time</string>
    <string name="minutes">Min</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>


    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="steps">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
    </string-array>

</resources>
