<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        >
        <!-- Main content -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:menu="@menu/bottom_navigation_menu"
            android:elevation="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="56sp"
            android:fontFamily="sans-serif-light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"/>

        <com.txusballesteros.widgets.FitChart
            android:id="@+id/fitchart"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="8dp"
            app:animationMode="overdraw"
            app:backStrokeColor="#00ff00"
            app:strokeSize="10dp"
            app:valueStrokeColor="#ff0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="72dp"
            />

        <TextView
            android:id="@+id/steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="72sp"
            android:text="@string/_600"
            android:layout_gravity="center_vertical|center_horizontal"
            />


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>